[ANW-952] More fixes for Tier 1 alignment

--- a/docroot/sites/all/themes/custom/nas/css/app.css
+++ b/docroot/sites/all/themes/custom/nas/css/app.css
@@ -14218,6 +14218,10 @@ h2.grey {
   font-size: 26px;
   margin-bottom: 13px;
 }
+.native-plants-search-results h4 {
+  font-size: 20px;
+  margin-bottom: 13px;
+}
 @media only screen and (max-width: 479px) {
   .native-plants-search-results h4 {
     margin: 10px 0px;
