--- a/docroot/sites/all/themes/custom/nas/scss/modules/_native-plants-search-results.scss
+++ b/docroot/sites/all/themes/custom/nas/scss/modules/_native-plants-search-results.scss
@@ -90,6 +90,10 @@ $color-dark-green:              #025e02;
     font-size: 26px;
     margin-bottom: 13px;
   }
+  h4 {
+    font-size: 20px;
+    margin-bottom: 13px;
+  }
 
   h4 {
     @include breakpoint(tiny-only) {
